# indexref-server

./: .env  .gitignore  Cargo.toml  README.md  build.sh  serve.sh
.github/workflows/: publish.yml
client/: package-lock.json  package.json  postcss.config.cjs
client/src/: App.tsx  JsonView.tsx  NodeData.tsx  NodeIcon.tsx  NodeLabel.tsx  NodeTree.tsx  main.css  server.ts  tree.module.css  treeNavigation.ts
client/src/signals/: server.ts
entity/: Cargo.toml
entity/src/: date_serializer.rs  file.rs  lib.rs  node.rs  node_presentation.rs  prelude.rs  relative_path.rs
entity/src/types/: file_type.rs  mod.rs  node_type.rs  path_buf.rs  relative_path.rs  source_type.rs
indexref-client/: index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  vite.config.ts
indexref-client/src/: App.tsx  NodeIcon.tsx  NodeLabel.tsx  NodeTree.tsx  api.ts  index.tsx  main.css  main.tsx  tree.module.css  utils.ts
indexref-client/src/signals/: getset.ts  server.ts
indexref-serve/: Cargo.toml
indexref-serve/src/: config.rs  err.rs  main.rs  path_convert.rs
indexref-serve/src/config/: mod.rs
indexref-serve/src/config/sources/: mod.rs  single_file_z.rs
indexref-serve/src/endpoints/: get_nodes.rs  gui.rs  index.html  mod.rs  node_data.rs  node_tree.sql
indexref-serve/src/entity/: mod.rs  node.rs  prelude.rs
indexref-serve/src/entity/types/: node_type.rs
indexref-serve/src/ext/: mod.rs  path.rs
indexref-serve/src/index/: get_nodes.rs  mod.rs  node_tree.sql  serve_file.rs
indexref-serve/src/index/builder/: onetab.rs  zotero.rs
indexref-serve/src/index/builder/scrapbook/: raw.rs
indexref-sync/: .env  Cargo.toml  config.json
indexref-sync/src/: config.rs  diff_files.rs  env_config.rs  file_finder.rs  macros.rs  main.rs  sources_config.rs
indexref-sync/src/ext/: mod.rs  option_os_str.rs  result.rs
indexref-sync/src/file_sync/: file_finder.rs  mod.rs  opensearch.rs
indexref-sync/src/file_sync/node_importer/: mod.rs  onetab.rs  single_file_z.rs
indexref-sync/src/file_sync/node_importer/scrapbook/: mod.rs
indexref-sync/src/file_sync/node_importer/telegram/: mod.rs
indexref-sync/src/file_sync/node_importer/telegram_importer/: def.rs
indexref-sync/src/file_sync/opensearch/: add_documents.rs  delete_by_query.rs  mod.rs
indexref-sync/src/watcher/: async_debouncer.rs  file_watcher.rs  json_watcher.rs  mod.rs  multi_watcher.rs
libsqlite3-extensions/: Cargo.toml  build.rs
libsqlite3-extensions/src/: lib.rs
migration/src/: lib.rs  m20230425_171207_create_table_nodes.rs  m20230426_114559_create_table_telegram.rs  m20230513_204605_create_table_nodes.rs  m20230515_140353_create_table_nodes.rs  m20230515_142131_create_table_nodes.rs  m20230515_143718_create_table_scrapbook.rs  m20230525_074739_create_table_zotero.rs  m20230527_120527_create_table_nodes.rs  m20230529_210447_create_table_nodes.rs  m20230609_151803_create_table_nodes.rs  m20230609_153719_create_table_telegram.rs  m20230609_160331_create_table_zotero.rs  m20230614_160038_create_table_nodes.rs  m20230718_133459_add_column_hash.rs  m20230719_220121_files_and_nodes.rs
src/: config.rs  macros.rs  main.rs  path_convert.rs  paths.rs  result.rs
src/config/: mod.rs  sources.rs
src/config/sources/: mod.rs  zotero.rs
src/entity/: date_serializer.rs  mod.rs  node.rs  scrapbook.rs  telegram.rs  zotero.rs
src/entity/types/: mod.rs  node_data.rs  node_type.rs
src/ext/: json.rs  mod.rs  path.rs  result.rs
src/index/: mod.rs  node_data.rs  node_presentation.rs  onetab.rs  scrapbook.rs  serve_file.rs  single_file_z.rs  zotero.rs
src/index/builder/: mod.rs  zotero.rs
src/index/builder/scrapbook/: export.rs  mod.rs  raw.rs
src/index/builder/telegram/: def.rs  export.rs  mod.rs  raw.rs
src/index/scrapbook/: icon.rs  mod.rs
src/index/telegram/: mod.rs  raw.rs
src/index/types/: mod.rs  string_vec.rs
src/result/: mod.rs  path.rs
