[package]
name = "indexref-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }

axum = "0.6.17"

sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "macros", "runtime-tokio-native-tls"] }
libsqlite3-sys = { version = "0.24.2", features = ["bundled"] }

directories-next = "2.0.0"

thiserror = "1.0.40"
justerror = "1.1.0"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"

entity = { path = "entity" }
migration = { path = "migration" }

serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
