[package]
name = "indexref-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }

axum = "0.6.17"
hyper = "0.14.26"

sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls"] }
libsqlite3-sys = { version = "0.24.2", features = ["bundled"] }

entity = { path = "entity" }
migration = { path = "migration" }

directories-next = "2.0.0"
walkdir = "2.3.3"

thiserror = "1.0.40"
justerror = "1.1.0"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"

serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.3"

clap = { version = "4.2.4", features = ["derive"] }
