[package]
name = "indexref-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.8", features = ["io"] }

axum = { version = "0.6.17", features = ["headers"] }
hyper = "0.14.26"

sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls"] }
libsqlite3-sys = { version = "0.24.2", features = ["bundled"] }

chrono = { version = "0.4.24", features = ["serde"] }

migration = { path = "migration" }

directories-next = "2.0.0"
walkdir = "2.3.3"

thiserror = "1.0.40"
eyre = "0.6.8"
color-eyre = "0.6.2"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"

serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.3"

yaserde = "0.8.0"
yaserde_derive = "0.8.0"

scraper = "0.16.0"

clap = { version = "4.2.4", features = ["derive"] }
dialoguer = { version = "0.10.4", default-features = false, features = [] }

relative-path = { version = "1.8.0", features = ["serde"] }
pathdiff = "0.2.1"
mime_guess = "2.0.4"

paste = "1.0.12"
once_cell = "1.17.1"

regex = "1.8.1"
urlencoding = "2.1.2"
