[package]
name = "indexref-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
futures = "0.3.28"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
walkdir = "2.3.3"
relative-path = { version = "1.8.0", features = ["serde"] }
pathdiff = "0.2.1"
sha256 = "1.2.1"
dotenv = "0.15.0"

sea-orm = { version = "0.11.3", features = ["sqlx-postgres"] }
migration = { path = "../migration" }
entity = { path = "../entity" }

eyre = "0.6.8"
color-eyre = "0.6.2"
thiserror = "1.0.43"
