[package]
name = "indexref-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
futures = "0.3.28"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
walkdir = "2.3.3"
sha256 = "1.2.2"
dotenv = "0.15.0"
tryvial = { version = "0.2.0", default_features = false }
chrono = { version = "0.4.24", features = ["serde"] }
once_cell = "1.18.0"
regex = "1.9.1"
url = "2.4.0"

scraper = "0.17.1"
yaserde = "0.8.0"
yaserde_derive = "0.8.0"

sea-orm = { version = "0.11.3", features = ["sqlx-postgres"] }
migration = { path = "../migration" }
entity = { path = "../entity" }

eyre = "0.6.8"
color-eyre = "0.6.2"
thiserror = "1.0.43"

log = "0.4.19"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

opensearch = "2.1.0"
